# signal-p

./: .gitignore  pyproject.toml
leaklens/: __init__.py  aes.py  attack.py  checksums.json  cli.py  labels.py  preprocess.py  report.py  seed.py  train.py
leaklens/models/: __init__.py  base.py  benadjila_cnn.py  mlp.py
leaklens/sources/: __init__.py  ascad.py
scripts/: attack.py  download_ascad.py  run_smoke_when_ready.py  train_cnn.py
tests/: test_attack.py  test_labels.py  test_models.py  test_preprocess.py  test_report.py  test_sources.py
