[project]
name = "leaklens"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "h5py>=3.10",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "click>=8.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "jupyter>=1.0", "nbconvert>=7.0", "ipykernel>=6.0"]

[project.scripts]
leaklens = "leaklens.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["leaklens*"]
